3-links/3-dep.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: links
spec:
  host: links
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: links
spec:
  hosts:
    - links
  http:
  - route:
    - destination:
        host: links
        subset: v1
---
kind: Service
apiVersion: v1
metadata:
  name: links
  lables:
    app: links
spec:
  selector:
    app: links
  ports:
  - name: http
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: links
  labels:
    app: links
spec:
  replicas: 1
  selector:
    matchLabels:
      app: links
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: links
        version: v1
    spec:
      containers:
      - name: links
        image: docker-registry.default.svc:5000/nemo/links:0.1
        ports:
        - containerPort: 8080
