3-links/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: links
spec:
  hosts:
    - links
  http:
  - route:
    - destination:
        host: links
        subset: v1
